// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendIPFSTransaction should render 1`] = `
<DocumentFragment>
  <div
    class="max-w-xl py-16 mx-auto"
  >
    <form
      class="space-y-8"
      data-testid="Form"
    >
      <div>
        <ul
          class="StepIndicator___StyledUl-sc-15t41is-1 dhAbBb"
        >
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 crUtTP"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
          <li
            class="StepIndicator__StepStyled-sc-15t41is-0 eXvSeq"
          />
        </ul>
        <div
          class="mt-8"
        >
          <div
            data-testid="tab-pabel__active-panel"
          >
            <section
              data-testid="SendIPFSTransaction__step--first"
            >
              <div>
                <h1
                  class="mb-0"
                >
                  IPFS
                </h1>
                <p
                  class="text-theme-neutral-dark"
                >
                  Store an IPFS hash on the network
                </p>
              </div>
              <div
                class="mt-4 grid grid-flow-row"
              >
                <div
                  class="flex items-center py-4 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-medium text-theme-neutral-700"
                    >
                      Network
                    </div>
                    <div
                      class="mt-2"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-1-label"
                        class="relative"
                        role="combobox"
                      >
                        <label
                          for="downshift-1-input"
                          id="downshift-1-label"
                        />
                        <div
                          class="relative flex items-center w-full flex-inline"
                        >
                          <div
                            class="flex w-full border rounded transition-colors duration-200 shadow-sm bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
                          >
                            <div
                              class="px-4 py-2 flex-0 w-14"
                            >
                              <div
                                class="sc-AxiKw cxOZEi border-theme-neutral-200"
                              />
                            </div>
                            <div
                              class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
                            >
                              <div
                                class="relative z-10 w-full"
                                data-testid="select-network__typeahead-"
                              >
                                <div
                                  class="absolute left-0 font-semibold top-2 text-theme-neutral-400"
                                />
                              </div>
                              <input
                                aria-autocomplete="list"
                                aria-labelledby="downshift-1-label"
                                autocomplete="off"
                                class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                                data-testid="select-asset__input"
                                id="downshift-1-input"
                                placeholder="Enter a network name"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-4 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-medium text-theme-neutral-700"
                    >
                      Sender
                    </div>
                    <div
                      class="mt-2"
                    >
                      <div
                        class="relative flex items-center"
                      >
                        <input
                          class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
                          data-testid="Input"
                          disabled=""
                          type="text"
                        />
                        <div
                          class="absolute flex items-center ml-3"
                        >
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jPulhL mr-3"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full overflow-hidden rounded-full"
                            >
                              <img
                                alt="test"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                                title="test"
                              />
                            </div>
                          </div>
                          <div
                            class="inline-block truncate align-middle"
                          >
                            <span
                              class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                              data-testid="address__wallet-name"
                            >
                              ROBank
                            </span>
                            <span
                              class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                              data-testid="address__wallet-address"
                            >
                              AUexKj…EVTQWK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-4 true "
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-medium text-theme-neutral-700"
                    >
                      Hash
                    </div>
                    <div
                      class="mt-2"
                    >
                      <input
                        class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
                        data-testid="Input"
                        name="hash"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center py-4 true pb-0"
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="text-sm font-medium text-theme-neutral-700"
                    >
                      Fee ARK
                    </div>
                    <div
                      class="mt-2"
                    >
                      <div
                        class="flex space-x-2"
                      >
                        <div
                          class="flex-1"
                        >
                          <div
                            class="sc-fzozJi OgXfh"
                          >
                            <input
                              class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
                              data-testid="InputCurrency"
                              type="text"
                              value="25"
                            />
                            <div
                              class="absolute bottom-0 w-full px-1"
                            >
                              <div
                                class="flex flex-wrap justify-center"
                                data-testid="Range"
                              >
                                <div
                                  class="sc-fzoLsD gcqOdX"
                                  data-testid="Range__track"
                                  style="transform: scale(1); cursor: pointer;"
                                >
                                  <div
                                    class="sc-fzpans fDmiZy"
                                    data-testid="Range__track__filled"
                                  >
                                    <div
                                      aria-valuemax="100"
                                      aria-valuemin="1"
                                      aria-valuenow="25"
                                      class="sc-fzplWN eSQZBV"
                                      data-testid="Range__thumb"
                                      draggable="false"
                                      role="slider"
                                      style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div>
                          <div
                            class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 shadow-sm"
                            data-testid="SelectionBar"
                            role="radiogroup"
                          >
                            <button
                              aria-checked="true"
                              class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Last
                            </button>
                            <button
                              aria-checked="false"
                              class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Min
                            </button>
                            <button
                              aria-checked="false"
                              class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                              data-testid="SelectionBarOption"
                              role="radio"
                            >
                              Average
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="flex justify-end mt-8 space-x-2"
          >
            <button
              class="sc-AxirZ fhzkRl"
              color="primary"
              data-testid="SendIPFSTransaction__button--back"
              disabled=""
              type="button"
            >
              Back
            </button>
            <button
              class="sc-AxirZ dPtiuf"
              color="primary"
              data-testid="SendIPFSTransaction__button--continue"
              type="button"
            >
              Continue
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SendIPFSTransaction should render 1st step 1`] = `
<DocumentFragment>
  <section
    data-testid="SendIPFSTransaction__step--first"
  >
    <div>
      <h1
        class="mb-0"
      >
        IPFS
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Store an IPFS hash on the network
      </p>
    </div>
    <div
      class="mt-4 grid grid-flow-row"
    >
      <div
        class="flex items-center py-4 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-medium text-theme-neutral-700"
          >
            Network
          </div>
          <div
            class="mt-2"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-0-label"
              class="relative"
              role="combobox"
            >
              <label
                for="downshift-0-input"
                id="downshift-0-label"
              />
              <div
                class="relative flex items-center w-full flex-inline"
              >
                <div
                  class="flex w-full border rounded transition-colors duration-200 shadow-sm bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
                >
                  <div
                    class="px-4 py-2 flex-0 w-14"
                  >
                    <div
                      class="sc-AxiKw cxOZEi border-theme-neutral-200"
                    />
                  </div>
                  <div
                    class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
                  >
                    <div
                      class="relative z-10 w-full"
                      data-testid="select-network__typeahead-"
                    >
                      <div
                        class="absolute left-0 font-semibold top-2 text-theme-neutral-400"
                      />
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-labelledby="downshift-0-label"
                      autocomplete="off"
                      class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                      data-testid="select-asset__input"
                      id="downshift-0-input"
                      placeholder="Enter a network name"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-medium text-theme-neutral-700"
          >
            Sender
          </div>
          <div
            class="mt-2"
          >
            <div
              class="relative flex items-center"
            >
              <input
                class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
                data-testid="Input"
                disabled=""
                type="text"
              />
              <div
                class="absolute flex items-center ml-3"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jPulhL mr-3"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full overflow-hidden rounded-full"
                  >
                    <img
                      alt="test"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                      title="test"
                    />
                  </div>
                </div>
                <div
                  class="inline-block truncate align-middle"
                >
                  <span
                    class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                    data-testid="address__wallet-name"
                  >
                    ROBank
                  </span>
                  <span
                    class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    AUexKj…EVTQWK
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-medium text-theme-neutral-700"
          >
            Hash
          </div>
          <div
            class="mt-2"
          >
            <input
              class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
              data-testid="Input"
              name="hash"
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-4 true pb-0"
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-medium text-theme-neutral-700"
          >
            Fee ARK
          </div>
          <div
            class="mt-2"
          >
            <div
              class="flex space-x-2"
            >
              <div
                class="flex-1"
              >
                <div
                  class="sc-fzozJi OgXfh"
                >
                  <input
                    class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 "
                    data-testid="InputCurrency"
                    type="text"
                    value="25"
                  />
                  <div
                    class="absolute bottom-0 w-full px-1"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="sc-fzoLsD gcqOdX"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="sc-fzpans fDmiZy"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="100"
                            aria-valuemin="1"
                            aria-valuenow="25"
                            class="sc-fzplWN eSQZBV"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300 shadow-sm"
                  data-testid="SelectionBar"
                  role="radiogroup"
                >
                  <button
                    aria-checked="true"
                    class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Last
                  </button>
                  <button
                    aria-checked="false"
                    class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Min
                  </button>
                  <button
                    aria-checked="false"
                    class="sc-fznyAO hWIpjZ relative px-5 py-3 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                    data-testid="SelectionBarOption"
                    role="radio"
                  >
                    Average
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIPFSTransaction should render 2nd step 1`] = `
<DocumentFragment>
  <section
    data-testid="SendIPFSTransaction__step--second"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Review
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Check the information again before voting
      </p>
    </div>
    <div
      class="mt-2 grid grid-flow-row gap-2"
    >
      <div
        class="flex items-center py-6 true "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Network
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <span>
              ARK Ecosystem
            </span>
          </div>
        </div>
        <div
          class="ml-1 text-theme-danger-500"
        >
          <div
            class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
          >
            <div
              class="sc-AxhUy hSYVGy"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Sender
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                data-testid="address__wallet-name"
              >
                ROBank
              </span>
              <span
                class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                data-testid="address__wallet-address"
              >
                AUexKj…EVTQWK
              </span>
            </div>
          </div>
        </div>
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
          data-testid="Avatar"
        >
          <div
            class="w-full h-full overflow-hidden rounded-full"
          >
            <img
              alt="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
              title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
      >
        <div
          class="flex-1"
        >
          <div
            class="text-sm font-semibold text-theme-neutral-500"
          >
            Hash
          </div>
          <div
            class="mt-2 font-semibold"
          >
            <span
              class="font-semibold"
            >
              QmceNpwJqQm7vXUivbQeeQYeGr1ivT1VDRPaWK9Pf
            </span>
          </div>
        </div>
        <div
          class="ml-1"
        >
          <div
            class="sc-AxiKw jQtkkF border-black bg-theme-background"
          >
            <div
              class="sc-AxhUy cztmDe"
              height="23"
              width="23"
            >
              <svg>
                ipfs.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="border rounded-lg border-theme-neutral-300"
      >
        <div
          class="relative p-3"
        >
          <div
            class="grid grid-cols-2 divide-x divide-gray-400"
          >
            <div
              class="flex flex-col justify-center px-6 py-5"
            >
              <span
                class="text-sm text-theme-neutral-500"
              >
                Transaction(s) Amount
              </span>
              <span
                class="mt-2 font-semibold"
                data-testid="total-amount-box__transaction-amount"
              >
                1.00 ARK
              </span>
            </div>
            <div
              class="flex flex-col justify-center px-6 py-5 text-right"
            >
              <span
                class="text-sm text-theme-neutral-500"
              >
                Transaction fee
              </span>
              <span
                class="mt-2 text-lg font-semibold"
                data-testid="total-amount-box__transaction-fee"
              >
                0.09660435 ARK
              </span>
            </div>
          </div>
          <div
            class="absolute top-0 bottom-0 left-0 right-0 flex items-center justify-center h-full text-center"
          >
            <div
              class="px-1 py-2 bg-white"
            >
              <div
                class="sc-AxhUy cIoObu"
                height="15"
                width="15"
              >
                <svg>
                  plus.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col items-center border-t rounded-b-lg border-theme-neutral-300 justfiy-center py-7 bg-theme-neutral-100"
        >
          <span
            class="text-sm text-theme-neutral-500"
          >
            Total Amount
          </span>
          <span
            class="text-2xl font-bold"
            data-testid="total-amount-box__total"
          >
            1.09660435 ARK
          </span>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIPFSTransaction should render 3rd step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="SendIPFSTransaction__step--third"
  >
    <div>
      <h1
        class="mb-0"
      >
        Passphrase
      </h1>
      <p
        class="text-theme-neutral-dark"
      >
        Confirm your password to continue
      </p>
      <div
        class="mt-4 grid grid-flow-row gap-2"
      >
        <div
          class="flex items-center py-6 true pb-0"
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Your password
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="sc-fzozJi OgXfh max-w-20"
              >
                <input
                  class="sc-AxgMl fypGbn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pr-12"
                  data-testid="Input"
                  name="passphras"
                  type="password"
                />
                <div
                  class="sc-AxheI sc-AxmLO ecniej my-px mr-4"
                >
                  <button
                    class="flex items-center justify-center w-full h-full text-2xl focus:outline-none bg-theme-background text-theme-primary-400"
                    data-testid="InputPassword__toggle"
                    type="button"
                  >
                    <div
                      class="sc-AxhUy cPXLjK"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        eye.svg
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendIPFSTransaction should render 4th step 1`] = `
<DocumentFragment>
  <section
    class="space-y-8"
    data-testid="TransactionSuccessful"
  >
    <div>
      <h1
        class="mb-0"
      >
        Transaction Successful
      </h1>
      <div
        class="grid grid-flow-row gap-2"
      >
        <div
          class="w-full my-10"
        >
          <svg
            class="w-full"
          >
            transaction_successful.svg
          </svg>
        </div>
        <p
          class="mb-4 text-theme-neutral-dark"
        >
          Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
        </p>
        <div
          class="flex items-center py-6 true "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              ID
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="sc-AxjAm StDqN text-theme-primary font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      AUexKjGtgsSpVz…MM6vJ6znEVTQWK
                    </span>
                  </div>
                </div>
                <div
                  class="mb-1 ml-5 text-theme-primary-300"
                >
                  <div
                    class="sc-AxhUy cPXLjK"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Block ID
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="inline-block truncate align-middle"
                  >
                    <span
                      class="sc-AxjAm StDqN text-theme-primary font-semibold text-base"
                      data-testid="address__wallet-address"
                    >
                      AUexKjGtgsSpVz…MM6vJ6znEVTQWK
                    </span>
                  </div>
                </div>
                <div
                  class="mb-1 ml-5 text-theme-primary-300"
                >
                  <div
                    class="sc-AxhUy cPXLjK"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Network
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  ROBank
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AUexKj…EVTQWK
                </span>
              </div>
            </div>
          </div>
          <div
            class="ml-1 text-theme-danger-500"
          >
            <div
              class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
            >
              <div
                class="sc-AxhUy hSYVGy"
                height="20"
                width="20"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="mt-2 font-semibold"
            >
              <div
                class="mb-2 text-sm font-semibold text-theme-neutral-500"
              >
                <span
                  class="mr-1"
                >
                  Sender
                </span>
                <div
                  class="sc-fzokOt bvPuXE"
                  color="warning"
                >
                  <span
                    class="text-sm"
                  >
                    Your address
                  </span>
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  ROBank
                </span>
                <span
                  class="sc-AxjAm StDqN text-theme-neutral-400 font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  AUexKj…EVTQWK
                </span>
              </div>
            </div>
          </div>
          <div
            class="mt-2"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full overflow-hidden rounded-full"
              >
                <img
                  alt="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                  title="AUexKjGtgsSpVzPLs6jNMM6vJ6znEVTQWK"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              IPFS Hash
            </div>
            <div
              class="mt-2 font-semibold"
            >
              <span
                class="font-semibold"
              >
                QmceNpwJqQm7vXUivbQeeQYeGr1ivT1VDRPaWK9Pf
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 pb-0"
        >
          <div
            class="flex-1"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-500"
            >
              Amount
            </div>
            <div
              class="mt-2 font-semibold"
            >
              1.00 ARK
            </div>
          </div>
          <div
            class="ml-1 text-theme-danger"
          >
            <div
              class="sc-AxiKw jQtkkF bg-theme-background border-theme-danger-200"
            >
              <div
                class="sc-AxhUy gwxBWy"
                height="22"
                width="22"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
